Reorganize registry deployment guide (#3485)
* Reorganize registry deployment guide

Also add information about pushing non-distributable
layers to private registries

Also add an example of running a registry as a swarm service

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -2387,7 +2387,7 @@ manuals:
   - path: /registry/introduction/
     title: Understanding the Registry
   - path: /registry/deploying/
-    title: Deploying a registry server
+    title: Deploy a registry server
   - path: /registry/configuration/
     title: Configuring a registry
   - path: /registry/notifications/
