--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -2382,7 +2382,7 @@ manuals:
   - path: /registry/introduction/
     title: Understanding the Registry
   - path: /registry/deploying/
-    title: Deploying a registry server
+    title: Deploy a registry server
   - path: /registry/configuration/
     title: Configuring a registry
   - path: /registry/notifications/
