--- a/_data/engine-cli-edge/docker.yaml
+++ b/_data/engine-cli-edge/docker.yaml
@@ -4,6 +4,7 @@ cname:
 - docker build
 - docker checkpoint
 - docker commit
+- docker config
 - docker container
 - docker cp
 - docker create
@@ -58,6 +59,7 @@ clink:
 - docker_build.yaml
 - docker_checkpoint.yaml
 - docker_commit.yaml
+- docker_config.yaml
 - docker_container.yaml
 - docker_cp.yaml
 - docker_create.yaml
