--- a/_data/engine-cli-edge/docker_container_prune.yaml
+++ b/_data/engine-cli-edge/docker_container_prune.yaml
@@ -33,6 +33,7 @@ examples: |-
   The currently supported filters are:
 
   * until (`<timestamp>`) - only remove containers created before given timestamp
+  * label (`label=<key>`, `label=<key>=<value>`, `label!=<key>`, or `label!=<key>=<value>`) - only remove containers with (or without, in case `label!=...` is used) the specified labels.
 
   The `until` filter can be Unix timestamps, date formatted
   timestamps, or Go duration strings (e.g. `10m`, `1h30m`) computed
@@ -45,6 +46,11 @@ examples: |-
   that have elapsed since January 1, 1970 (midnight UTC/GMT), not counting leap
   seconds (aka Unix epoch or Unix time), and the optional .nanoseconds field is a
   fraction of a second no more than nine digits long.
+
+  The `label` filter accepts two formats. One is the `label=...` (`label=<key>` or `label=<key>=<value>`),
+  which removes containers with the specified labels. The other
+  format is the `label!=...` (`label!=<key>` or `label!=<key>=<value>`), which removes
+  containers without the specified labels.
 
   The following removes containers created more than 5 minutes ago:
 
