--- a/_data/engine-cli-edge/docker_image_prune.yaml
+++ b/_data/engine-cli-edge/docker_image_prune.yaml
@@ -60,6 +60,7 @@ examples: |2-
   The currently supported filters are:
 
   * until (`<timestamp>`) - only remove images created before given timestamp
+  * label (`label=<key>`, `label=<key>=<value>`, `label!=<key>`, or `label!=<key>=<value>`) - only remove images with (or without, in case `label!=...` is used) the specified labels.
 
   The `until` filter can be Unix timestamps, date formatted
   timestamps, or Go duration strings (e.g. `10m`, `1h30m`) computed
@@ -72,6 +73,11 @@ examples: |2-
   that have elapsed since January 1, 1970 (midnight UTC/GMT), not counting leap
   seconds (aka Unix epoch or Unix time), and the optional .nanoseconds field is a
   fraction of a second no more than nine digits long.
+
+  The `label` filter accepts two formats. One is the `label=...` (`label=<key>` or `label=<key>=<value>`),
+  which removes images with the specified labels. The other
+  format is the `label!=...` (`label!=<key>` or `label!=<key>=<value>`), which removes
+  images without the specified labels.
 
   The following removes images created before `2017-01-04T00:00:00`:
 
