--- a/_data/engine-cli-edge/docker_info.yaml
+++ b/_data/engine-cli-edge/docker_info.yaml
@@ -124,6 +124,7 @@ examples: |-
     Heartbeat Period: 5 seconds
    CA Configuration:
     Expiry Duration: 3 months
+   Root Rotation In Progress: false
    Node Address: 172.16.66.128 172.16.66.129
    Manager Addresses:
     172.16.66.128:2477
