--- a/_data/engine-cli-edge/docker_plugin_ls.yaml
+++ b/_data/engine-cli-edge/docker_plugin_ls.yaml
@@ -38,7 +38,7 @@ examples: |-
   The currently supported filters are:
 
   * enabled (boolean - true or false, 0 or 1)
-  * capability (string - currently `volumedriver`, `networkdriver`, `ipamdriver`, or `authz`)
+  * capability (string - currently `volumedriver`, `networkdriver`, `ipamdriver`, `logdriver`, `metricscollector`, or `authz`)
 
   #### enabled
 
@@ -48,7 +48,7 @@ examples: |-
 
   The `capability` filter matches on plugin capabilities. One plugin
   might have multiple capabilities. Currently `volumedriver`, `networkdriver`,
-  `ipamdriver`, and `authz` are supported capabilities.
+  `ipamdriver`, `logdriver`, `metricscollector`, and `authz` are supported capabilities.
 
   ```bash
   $ docker plugin install --disable tiborvass/no-remove
@@ -59,7 +59,6 @@ examples: |-
 
   NAME                  TAG                 DESCRIPTION                ENABLED
   ```
-
 
   ### Formatting
 
