--- a/_data/engine-cli-edge/docker_secret_inspect.yaml
+++ b/_data/engine-cli-edge/docker_secret_inspect.yaml
@@ -18,6 +18,9 @@ options:
 - option: format
   shorthand: f
   description: Format the output using the given Go template
+- option: pretty
+  default_value: "false"
+  description: Print the information in a human friendly format
 examples: |-
   ### Inspect a secret by name or ID
 
