--- a/_data/engine-cli-edge/docker_service_update.yaml
+++ b/_data/engine-cli-edge/docker_service_update.yaml
@@ -16,6 +16,10 @@ plink: docker_service.yaml
 options:
 - option: args
   description: Service command args
+- option: config-add
+  description: Add or update a config file on a service
+- option: config-rm
+  description: Remove a configuration file
 - option: constraint-add
   description: Add or update a placement constraint
 - option: constraint-rm
@@ -62,15 +66,15 @@ options:
 - option: health-cmd
   description: Command to run to check health
 - option: health-interval
-  description: Time between running the check (ns|us|ms|s|m|h)
+  description: Time between running the check (ms|s|m|h)
 - option: health-retries
   default_value: "0"
   description: Consecutive failures needed to report unhealthy
 - option: health-start-period
   description: |
-    Start period for the container to initialize before counting retries towards unstable (ns|us|ms|s|m|h)
+    Start period for the container to initialize before counting retries towards unstable (ms|s|m|h)
 - option: health-timeout
-  description: Maximum time to allow one check to run (ns|us|ms|s|m|h)
+  description: Maximum time to allow one check to run (ms|s|m|h)
 - option: host-add
   description: Add or update a custom host-to-IP mapping (host:ip)
 - option: host-rm
@@ -103,6 +107,10 @@ options:
 - option: no-healthcheck
   default_value: "false"
   description: Disable any container-specified HEALTHCHECK
+- option: no-resolve-image
+  default_value: "false"
+  description: |
+    Do not query the registry to resolve image digest and supported platforms
 - option: placement-pref-add
   description: Add a placement preference
 - option: placement-pref-rm
