--- a/_data/engine-cli-edge/docker_stack_ls.yaml
+++ b/_data/engine-cli-edge/docker_stack_ls.yaml
@@ -5,6 +5,9 @@ long: Lists the stacks.
 usage: docker stack ls
 pname: docker stack
 plink: docker_stack.yaml
+options:
+- option: format
+  description: Pretty-print stacks using a Go template
 examples: |-
   The following command shows all stacks and some additional information:
 
@@ -14,5 +17,29 @@ examples: |-
   ID                 SERVICES
   vossibility-stack  6
   myapp              2
+  ```
+
+  ### Formatting
+
+  The formatting option (`--format`) pretty-prints stacks using a Go template.
+
+  Valid placeholders for the Go template are listed below:
+
+  | Placeholder | Description        |
+  | ----------- | ------------------ |
+  | `.Name`     | Stack name         |
+  | `.Services` | Number of services |
+
+  When using the `--format` option, the `stack ls` command either outputs
+  the data exactly as the template declares or, when using the
+  `table` directive, includes column headers as well.
+
+  The following example uses a template without headers and outputs the
+  `Name` and `Services` entries separated by a colon for all stacks:
+
+  ```bash
+  $ docker stack ls --format "{{.Name}}: {{.Services}}"
+  web-server: 1
+  web-cache: 4
   ```
 
