--- a/_data/engine-cli-edge/docker_swarm.yaml
+++ b/_data/engine-cli-edge/docker_swarm.yaml
@@ -5,6 +5,7 @@ usage: docker swarm
 pname: docker
 plink: docker.yaml
 cname:
+- docker swarm ca
 - docker swarm init
 - docker swarm join
 - docker swarm join-token
@@ -13,6 +14,7 @@ cname:
 - docker swarm unlock-key
 - docker swarm update
 clink:
+- docker_swarm_ca.yaml
 - docker_swarm_init.yaml
 - docker_swarm_join.yaml
 - docker_swarm_join-token.yaml
