--- a/_data/engine-cli-edge/docker_swarm_init.yaml
+++ b/_data/engine-cli-edge/docker_swarm_init.yaml
@@ -19,6 +19,9 @@ options:
 - option: cert-expiry
   default_value: 2160h0m0s
   description: Validity period for node certificates (ns|us|ms|s|m|h)
+- option: data-path-addr
+  description: |
+    Address or interface to use for data path traffic (format: <ip|interface>)
 - option: dispatcher-heartbeat
   default_value: 5s
   description: Dispatcher heartbeat period (ns|us|ms|s|m|h)
@@ -115,6 +118,15 @@ examples: |-
 
   Specifying a port is optional. If the value is a bare IP address or interface
   name, the default port 2377 will be used.
+
+  ### `--data-path-addr`
+
+  This flag specifies the address that global scope network drivers will publish towards
+  other nodes in order to reach the containers running on this node.
+  Using this parameter it is then possible to separate the container's data traffic from the
+  management traffic of the cluster.
+  If unspecified, Docker will use the same IP address or interface that is used for the
+  advertise address.
 
   ### `--task-history-limit`
 
