Added section for AWS load balancer, and added Docker for AWS 17.06 release notes
Signed-off-by: Ken Cochrane <kencochrane@gmail.com>

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -75,6 +75,8 @@ guides:
       title: Deploy your app
     - path: /docker-for-aws/persistent-data-volumes/
       title: Persistent data volumes
+    - path: /docker-for-aws/load-balancer/
+      title: Load balancer
     - path: /docker-for-aws/faqs/
       title: FAQs
     - path: /docker-for-aws/opensource/
