Add first draft of trust chain documentation (#3680)
* Add first draft of trust chain documentation

* Adding Trust Chain to TOC

* Updates per review feedback

* Fixes

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -2509,6 +2509,8 @@ manuals:
     title: Docker Store overview
   - path: /docker-store/publish/
     title: Submit a product to Docker Store
+  - title: Docker Store Trust Chain
+    path: /docker-store/trustchain/
   - path: /docker-store/faq/
     title: Docker Store FAQs
 - sectiontitle: Release notes
