--- a/_data/ddc_offline_files.yaml
+++ b/_data/ddc_offline_files.yaml
@@ -6,6 +6,8 @@
 
 - ucp-version: "2.1"
   tar-files:
+    - description: "UCP 2.1.5"
+      url: https://packages.docker.com/caas/ucp_images_2.1.5.tar.gz
     - description: "UCP 2.1.4"
       url: https://packages.docker.com/caas/ucp_images_2.1.4.tar.gz
     - description: "UCP 2.1.3"
@@ -16,6 +18,8 @@
       url: https://packages.docker.com/caas/ucp_images_2.1.1.tar.gz
     - description: "UCP 2.1.0"
       url: https://packages.docker.com/caas/ucp_images_2.1.0.tar.gz
+    - description: "DTR 2.2.7"
+      url: https://packages.docker.com/caas/dtr-2.2.7.tar.gz
     - description: "DTR 2.2.6"
       url: https://packages.docker.com/caas/dtr-2.2.6.tar.gz
     - description: "DTR 2.2.5"
@@ -32,10 +36,14 @@
       url: https://packages.docker.com/caas/dtr-2.2.0.tar.gz
 - ucp-version: "2.0"
   tar-files:
+    - description: "UCP 2.0.4"
+      url: https://packages.docker.com/caas/ucp_images_2.0.4.tar.gz
     - description: "UCP 2.0.3"
       url: https://packages.docker.com/caas/ucp_images_2.0.3.tar.gz
     - description: "UCP 2.0.2"
       url: https://packages.docker.com/caas/ucp_images_2.0.2.tar.gz
+    - description: "DTR 2.1.7"
+      url: https://packages.docker.com/caas/dtr-2.1.7.tar.gz
     - description: "DTR 2.1.6"
       url: https://packages.docker.com/caas/dtr-2.1.6.tar.gz
     - description: "DTR 2.1.5"
