--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -1248,6 +1248,8 @@ samples:
     title: Samples home
   - path: /engine/examples/apt-cacher-ng/
     title: apt-cacher-ng
+  - path: /engine/examples/dotnetcore/
+    title: Dockerize a .NET application
   - path: /compose/aspnet-mssql-compose/
     title: ASP.NET Core + SQL Server on Linux
   - path: /engine/examples/couchdb_data_volumes/
