Productionized, content parsing, skip internal

--- a/_scripts/pullsuccess/Dockerfile
+++ b/_scripts/pullsuccess/Dockerfile
@@ -6,4 +6,7 @@ ADD . /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+# TO RUN, cd to root of GitHub repo and run this:
+# docker run -it --rm --name pullsuccess -v "$PWD":/app -w /app docs/pullsuccess python pullsuccess.py
+
 CMD [ "python", "pullsuccess.py" ]
